--- a/_data/candidates.yml
+++ b/_data/candidates.yml
@@ -1,41 +1,20 @@
-- office: Governor & Lt. Governor
-  name: Jack Conway & Sannie Overly
-  website: www.conwayoverly.com
-  facebook: conwayforky
-  twitter: ConwayforKY
-  photo: Conway
-    
-- office: Attorney General
-  name: Andy Beshear
-  website: www.andybeshear.com
-  facebook: AndyBeshearKY
-  twitter: AndyBeshearKY
-  photo: Andy-Beshear
-    
-- office: Secretary of State
-  name: Alison Lundergan Grimes
-  website: www.alisonforkentucky.com
-  facebook: AlisonForKentucky
-  twitter: AlisonForKY
-  photo: Alison-Grimes
-    
-- office: State Auditor
-  name: Adam Edelen
-  website: www.adamedelen.com
-  facebook: EdelenKY
-  twitter: adamhedelen
-  photo: Adam-Edelen
-
-- office: State Treasurer
-  name: Rick Nelson
-  website: www.ricknelsonky.com
-  facebook: ricknelsonky
-  twitter: RickNelsonKY
-  photo: Rick-Nelson
-    
-- office: Commissioner of Agriculture
-  name: Jean-Marie Lawson Spann
-  website: www.jean-marieforkyag.com
-  facebook: jeanmarie.lawson
-  twitter: JMforKYAg2015
-  photo: Jean-Marie-Lawson-Spann
+- office: President of the United States
+  name: Hillary Clinton
+  website: https://hillaryclinton.com/
+  facebook: hillaryclinton
+  twitter: HillaryClinton
+  photo: Hillary-Clinton
+  
+- office: President of the United States
+  name: Martin O'Malley
+  website: https://martinomalley.com/
+  facebook: MartinOMalley
+  twitter: MartinOMalley
+  photo: Martin-O'Malley
+  
+- office: President of the United States
+  name: Bernie Sanders
+  website: https://berniesanders.com
+  facebook: berniesanders
+  twitter: BernieSanders
+  photo: Bernie-Sanders
