updated exec committee list

--- a/_data/committee.yml
+++ b/_data/committee.yml
@@ -4,35 +4,42 @@
 - name: Jane Elkin Thomas
   title: Vice-Chair
 
-- name: Tabitha Browning
-  title: Secretary
+- name: Cindy Green
+  title: Treasurer
 
-- name: Bonnie Slaughter
+- name: Clayton Brown
+  title: Young Democrats President
+
+- name: Tabitha Browning
+
+- name: Cyndi Powell Skellie
+
+- name: Linda Bullock
+
+- name: Roland Dale
+
+- name: Deb Devine
+
+- name: Ann Lynn Ellerkamp
+
+- name: Howard Griffith
+
+- name: Eve Lawson-Lewis
 
 - name: Jim O'Malley
 
 - name: Kathy Mason
 
-- name: Fred Rothenburger
-
-- name: Debbie Rothenburger 
-
-- name: Bill Tuttle
-
-- name: Deb Divine
-
-- name: Howard Griffith
-
-- name: Cindy Green
-
-- name: Stephen Houston
-
-- name: Lori Nation
-
-- name: Inez Harris
+- name: Sue Carole Perry
 
 - name: Austin Redmon
 
-- name: Owen Humphress 
+- name: Emma Redmon
 
-- name: Sue Carole Perry
+- name: Debbie Rothenburger
+
+- name: Fred Rothenburger
+
+- name: Andy Schmidt
+
+- name: Bonnie Slaughter
