updated candidate page

--- a/_data/candidates.yml
+++ b/_data/candidates.yml
@@ -5,18 +5,18 @@
   twitter: HillaryClinton
   photo: Hillary-Clinton
 
-- office: President of the United States
-  name: Bernie Sanders
-  website: www.berniesanders.com
-  facebook: berniesanders
-  twitter: BernieSanders
-  photo: Bernie-Sanders
+- office: US Senate
+  name: Jim Gray
+  website: grayforkentucky.com
+  facebook: GrayforKentucky
+  twitter: GrayforKentucky
+  photo: Jim-Gray
 
 - office: Kentucky House of Representatives
   name: Cyndi Powell Skelli
-  website: www.cyndiskellieky.com/
-  facebook: cyndiskellieky
-  twitter: cyndiskellieky
+  website: www.skellieforky.com/
+  facebook: skellieforky
+  twitter: Skellie4KY
   photo: Cyndi-Skelli
 
 - office: US House of Representatives
@@ -25,31 +25,3 @@
   facebook: OfficialCalvinSidle
   twitter: CalvinSidle
   photo: Calvin-Sidle
-
-- office: US Senate
-  name: Jim Gray
-  website: grayforkentucky.com
-  facebook: GrayforKentucky
-  twitter: GrayforKentucky
-  photo: Jim-Gray
-
-- office: US Senate
-  name: Sellus Wilder
-  website: www.wilderforsenate.com
-  facebook: Wilder-for-US-Senate-1686376881610229
-  twitter: sellus_wilder
-  photo: Sellus-Wilder
-
-- office: US Senate
-  name: Ron Leach
-  website: www.ronleach4ky.com
-  facebook: Ron-Leach-for-US-Senate-466825476727124
-  twitter: ronleach4ky
-  photo: Ron-Leach
-
-- office: US Senate
-  name: Jeff Kender
-  website: www.kender4senate2016.com
-  facebook: electjeffkenderky
-  twitter: kender4senate
-  photo: Jeff-Kender
