--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/shakyShane/jekyll-gulp-sass-browser-sync.git"
+    "url": "git+https://github.com/shakyShane/jekyll-gulp-sass-browser-sync.git"
   },
   "keywords": [
     "jekyll",
