Removed special link, updated committee list, and added new post

--- a/_data/committee.yml
+++ b/_data/committee.yml
@@ -21,15 +21,11 @@
 
 - name: Deb Divine
 
-- name: Ann Lynn Ellerkamp
-
 - name: Howard Griffith
 
 - name: Eve Lawson-Lewis
 
 - name: Jim O'Malley
-
-- name: Sue Carole Perry
 
 - name: Austin Redmon
 
@@ -44,3 +40,5 @@
 - name: Bonnie Slaughter
 
 - name: Jane Elkin Thomas
+
+- name: Bill Young
