update candidate info and added alt tags to img

--- a/_data/candidates.yml
+++ b/_data/candidates.yml
@@ -28,7 +28,7 @@
 
 - office: Kentucky House of Representatives
   name: Bobby Lacer
-  website:
+  website: www.lacer4ky.com/
   facebook: Lacer4KY
   twitter: bobbylacer
   photo: bobby-lacer
