candidate info update

--- a/_data/candidates.yml
+++ b/_data/candidates.yml
@@ -63,8 +63,8 @@
 
 - office: Magistrate District 6
   name: Ashley Snider
-  website:
-  facebook:
+  website: http://www.ashleysnider.com/
+  facebook: ashleysniderfordistrict6
   twitter:
   photo: ashley-snider
 
