--- a/_data/committee.yml
+++ b/_data/committee.yml
@@ -10,10 +10,12 @@
 - name: Clayton Brown
   title: Young Democrats President
 
+- name: Walter Anderson
+
 - name: Fielding Ballard
 
 - name: Tabitha Browning
- 
+
 - name: Roland Dale
 
 - name: Deb Divine
@@ -26,15 +28,13 @@
 
 - name: Howard Griffith
 
-- name: Eve Lawson-Lewis
-
 - name: Jim O'Malley
+
+- name: Mitchell Payne
 
 - name: Austin Redmon
 
 - name: Emma Redmon
-
-- name: Debbie Rothenburger
 
 - name: Fred Rothenburger
 
