updated candidates and exec committee

--- a/_data/candidates.yml
+++ b/_data/candidates.yml
@@ -29,6 +29,11 @@
   photo: geoff-young
 
 - office: Secretary of State
+  name: Jason Belcher
+  website: https://jasonforkentucky.com/
+  photo: jason-belcher
+
+- office: Secretary of State
   name: Jason Griffith
   website: http://www.jasonsgriffith.com/
   facebook: JasonForSoS
@@ -60,6 +65,12 @@
   photo: kelsey-coots
 
 - office: Auditor
+  name: Drew Curtis
+  facebook: drewcurtisforauditor
+  twitter: DrewCurtis
+  photo: drew-curtis
+
+- office: Auditor
   name: Sheri Donahue
   website: https://donahueforky.com
   facebook: Sheri4KY
@@ -83,3 +94,14 @@
   facebook: JoshMers4KY
   twitter: JoshMers4KY
   photo: josh-mers
+
+- office: Commissioner of Agriculture
+  name: Robert Haley Conway
+  facebook: Conway2019
+  photo: robert-conway
+
+- office: Commissioner of Agriculture
+  name: Joe Trigg
+  website: https://www.joetrigg.com/
+  facebook: Joe-Trigg-282276942640474
+  photo: joe-trigg  
