--- a/_data/committee.yml
+++ b/_data/committee.yml
@@ -4,8 +4,14 @@
 - name: Bill Young
   title: Vice-Chair
 
+- name: Marsha Morris
+  title: Secretary
+
 - name: Sydney Lawson
   title: Treasurer
+
+- name: Matt Pippin
+  title: General Counsel
 
 - name: Clayton Brown
   title: Young Democrats President
@@ -14,11 +20,13 @@
 
 - name: Fielding Ballard
 
+- name: Will Barnett
+
 - name: Tabitha Browning
 
-- name: Roland Dale
+- name: Shauna Cook
 
-- name: Deb Divine
+- name: Roland Dale
 
 - name: Joyce Fitzgerald
 
@@ -28,7 +36,7 @@
 
 - name: Howard Griffith
 
-- name: Jim O'Malley
+- name: Tiffany Montgomery
 
 - name: Mitchell Payne
 
@@ -38,10 +46,8 @@
 
 - name: Fred Rothenburger
 
+- name: Cyndi Kaye Powell
+
 - name: Andy Schmidt
 
-- name: Cyndi Powell Skellie
-
 - name: Bonnie Slaughter
-
-- name: Jane Elkin Thomas
