--- a/_data/officials.yml
+++ b/_data/officials.yml
@@ -12,47 +12,26 @@
 - type: County Democratic Elected Officers
   officials:
 
-  - office: Shelbyville Mayor
-    name: Tom Hardesty
-
-  - office: Shelbyville City Council
-    name: Donna Eaton
-
-  - office: Shelbyville City Council
-    name: Mike Zoeller
-
   - office: Property Valuation Administrator
     name: Brad McDowell
 
   - office: County Clerk
     name: Sue Carole Perry
 
-  - office: Sheriff
-    name: Mike Armstrong
-
-  - office: Jailer
-    name: Bobby Waits
-
   - office: County Surveyor
     name: George R. Best
 
   - office: District 1 Magistrate
-    name: Hubert Pollett
+    name: Ross Webb
 
   - office: District 5 Magistrate
     name: Eddie Kingsolver
-
-  - office: District 6 Magistrate
-    name: James Tony Carriss
 
   - office: District 1 Constable
     name: Bobby Ivers
 
   - office: District 4 Constable
     name: Donnie Bruner
-
-  - office: District 6 Constable
-    name: Gary L. Tindle
 
   - office: District 7 Constable
     name: Harold W. Sutton
