update candidate info

--- a/_data/candidates.yml
+++ b/_data/candidates.yml
@@ -42,7 +42,9 @@
 
 - office: Secretary of State
   name: Heather French Henry
+  website: https://www.heatherfrenchhenrysos.com
   facebook: heatherfrenchenryforky
+  twitter: missamerica2000
   photo: heather-henry
 
 - office: Secretary of State
@@ -79,6 +81,7 @@
 
 - office: Auditor
   name: Chris Tobe
+  website: http://www.christobe.com/
   twitter: tobecb
   photo: chris-tobe
 
@@ -104,4 +107,4 @@
   name: Joe Trigg
   website: https://www.joetrigg.com/
   facebook: Joe-Trigg-282276942640474
-  photo: joe-trigg  
+  photo: joe-trigg
