--- a/_data/candidates.yml
+++ b/_data/candidates.yml
@@ -100,6 +100,7 @@
 
 - office: Commissioner of Agriculture
   name: Robert Haley Conway
+  website: https://www.conwayforky19.com
   facebook: Conway2019
   photo: robert-conway
 
