added reorg information + update committee

--- a/_data/committee.yml
+++ b/_data/committee.yml
@@ -13,7 +13,7 @@
 - name: Matt Pippin
   title: General Counsel
 
-- name: Clayton Brown
+- name: Amy Fishback
   title: Young Democrats President
 
 - name: Walter Anderson
