updated exec committee and other changes

--- a/_data/committee.yml
+++ b/_data/committee.yml
@@ -1,53 +1,22 @@
-- name: Kathy Mason
+- name: Will Barnett
   title: Chair
 
-- name: Bill Young
+- name: Kathy Mason
   title: Vice-Chair
 
-- name: Marsha Morris
-  title: Secretary
-
-- name: Sydney Lawson
+- name: Fielding Ballard
   title: Treasurer
 
-- name: Matt Pippin
-  title: General Counsel
+- name: Clayton Brown
 
-- name: Amy Fishback
-  title: Young Democrats President
+- name: Doug Butler
 
-- name: Walter Anderson
+- name: Elaine Farris
 
-- name: Fielding Ballard
+- name: Tammy Foster
 
-- name: Will Barnett
+- name: Deric Senecal
 
-- name: Tabitha Browning
+- name: Jane Thomas
 
-- name: Shauna Cook
-
-- name: Roland Dale
-
-- name: Joyce Fitzgerald
-
-- name: Whitney Forbes
-
-- name: Cindy Green
-
-- name: Howard Griffith
-
-- name: Tiffany Montgomery
-
-- name: Mitchell Payne
-
-- name: Austin Redmon
-
-- name: Emma Redmon
-
-- name: Fred Rothenburger
-
-- name: Cyndi Kaye Powell
-
-- name: Andy Schmidt
-
-- name: Bonnie Slaughter
+- name: Cynthia Weinmann
